assets/kyverno-patch-gpu-validator.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: patch-nvidia-validator-noop
spec:
  rules:
    - name: noop-driver-validation
      match:
        resources:
          kinds:
            - Pod
          namespaces:
            - gpu-operator
          selector:
            matchLabels:
              app: nvidia-operator-validator
      mutate:
        patchStrategicMerge:
          spec:
            initContainers:
              - name: driver-validation
                image: docker.io/library/busybox:1.36.1
                imagePullPolicy: IfNotPresent
                command: ["/bin/sh", "-c"]
                args:
                  - |
                    echo "GPU Operator Validator Dummy";
                    touch /run/nvidia/validations/driver-ready;
                    sleep 5;
                    exit 0
    - name: noop-toolkit-validation
      match:
        resources:
          kinds:
            - Pod
          namespaces:
            - gpu-operator
          selector:
            matchLabels:
              app: nvidia-operator-validator
      mutate:
        patchStrategicMerge:
          spec:
            initContainers:
              - name: toolkit-validation
                image: docker.io/library/busybox:1.36.1
                imagePullPolicy: IfNotPresent
                command: ["/bin/sh", "-c"]
                args:
                  - |
                    echo "GPU Operator Validator Dummy";
                    touch /run/nvidia/validations/toolkit-ready;
                    sleep 5;
                    exit 0
